syntax = "proto3";
import "WalletTx.proto"; 
package Enze;

message Order 
{
    bytes hashReply = 1;
    WalletTx txOrder = 2;
}
